--- a/src/styles/heros.scss
+++ b/src/styles/heros.scss
@@ -35,7 +35,7 @@
 
 @media screen and (min-width: 720px) {
   .heros {
-    height: 90vh;
+    height: 100vh;
     justify-content: center;
     background-image: url("../images/monitor-grosse-resolution.jpg");
 
